src/styles/_chapter-blockchain.scss
@import "_base";

.chapter-blockchain {
  .step-0 {
    background: url("../assets/images/chapters/chapter-blockchain/blockchain-0.png")
      center center no-repeat;
  }

  .step-1 {
    background: url("../assets/images/chapters/chapter-blockchain/blockchain-1.png")
      center center no-repeat;
  }

  .step-2 {
    background: url("../assets/images/chapters/chapter-blockchain/blockchain-2.png")
      center center no-repeat;
  }

  .step-2a,
  .step-3 {
    background: url("../assets/images/chapters/chapter-blockchain/blockchain-3.png")
      center center no-repeat;
  }

  .step-4 {
    background: url("../assets/images/chapters/chapter-blockchain/blockchain-4.png")
      center center no-repeat;
  }

  .step-5 {
    background: url("../assets/images/chapters/chapter-blockchain/blockchain-5.png")
      center center no-repeat;
  }
  .step-5a {
    background: url("../assets/images/chapters/chapter-blockchain/blockchain-5a.png")
      center center no-repeat;
  }
  
  .step-1 {
    .click-box {
      top: 157px;
      left: 8px;
      width: 160px;
      height: 67px;
    }
  }

  .step-2 {
    .click-box {
      top: 113px;
      right: 183px;
      width: 40px;
      height: 23px;
    }    
  }

  .step-2a {
    .flyout {
      width: 295px;
      height: 127px;
      display: flex;
      flex-flow: column;
      justify-content: center;
    }
  }
  .step-3 {
    .click-box {
      bottom: 69px;
      right: 196px;
      width: 43px;
      height: 24px;
    }    
  }

  .step-4 {
    .click-box {
      top: 81px;
      left: 8px;
      width: 160px;
      height: 67px;
    }
  }

  .step-5 {
    .click-box {
      bottom: 165px;
      left: 368px;
      width: 64px;
      height: 24px;
    }    
  }

  .step-5a {
    .flyout {
      width: 295px;
      height: 107px;
      display: flex;
      flex-flow: column;
      justify-content: center;
    }
  }

  .step-5b {
    background: url("../assets/images/backgrounds/generic-phone-backdrop.png") center center no-repeat;
  }

  .phone-step-1  {
    background: url("../assets/images/chapters/chapter-blockchain/blockchain-mobile-5b2.png") center center no-repeat;

    .flyout {
      width: 242px;
      left: 280px;
      bottom: 92px;
    }
  }  
}

